--- a/trunk/css/network-summary-admin.css
+++ b/trunk/css/network-summary-admin.css
@@ -9,3 +9,12 @@
 .network-summary tbody tr:nth-child(odd) {
     background-color: aliceblue;
 }
+
+.form-table th, .form-table td {
+    padding: 10px 5px;
+}
+
+th.label-row-deciding-role {
+    width: 250px;
+    vertical-align: middle;
+}
