Update for 1.1.5 * Added rss functionality.
git-svn-id: https://plugins.svn.wordpress.org/network-summary/trunk@831652 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/network-summary.css
+++ b/css/network-summary.css
@@ -91,3 +91,9 @@ h2 a {
     float: left;
     width: 30%;
 }
+
+.network-feed {
+    margin-left: 3px;
+    padding: 0 0 0 19px;
+    background: url("../images/feed-icon-14x14.png") no-repeat 0 50%;
+}
