--- a/css/network-summary.css
+++ b/css/network-summary.css
@@ -13,7 +13,7 @@
 }
 
 .netview-site .header-image img {
-    max-width: 100%;
+    width: 100%;
     border: 1px solid black;
     margin-top: 10px;
 }
