--- a/css/custom-feed-builder.css
+++ b/css/custom-feed-builder.css
@@ -1,12 +1,12 @@
 #content #custom-feed-input {
     width: 100%;
     display: block;
-
     padding: 5px;
     font-family: Consolas, Monaco, 'Courier New', monospace;
-    border: 1px solid grey;
-    font-weight: bold;
-    height: 70px;
+    font-size: .8em;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    box-sizing: border-box;
 }
 
 .site-checkbox-label {
@@ -27,5 +27,25 @@
 }
 
 .category {
-    margin-bottom: 15px;
+    margin-bottom: 30px;
+}
+
+.pure-button {
+    margin-top: 20px;
+}
+
+.rss-message {
+    display: none;
+    border: 1px solid;
+    padding: 15px 10px;
+}
+
+.rss-message.valid {
+    color: #4F8A10;
+    background-color: #DFF2BF;
+}
+
+.rss-message.error {
+    color: #D8000C;
+    background-color: #FFBABA;
 }
