some corner-case fixes for the builder (meaning I almost rebuilt the whole thing)
git-svn-id: https://plugins.svn.wordpress.org/network-summary/trunk@862558 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/custom-feed-builder.css
+++ b/css/custom-feed-builder.css
@@ -9,7 +9,7 @@
     box-sizing: border-box;
 }
 
-.site-checkbox-label {
+.site {
     display: inline-block;
     min-width: 45%;
 }
@@ -27,7 +27,25 @@
 }
 
 .category {
-    margin-bottom: 30px;
+    margin-bottom: 40px;
+    padding-bottom: 20px;
+    border-bottom: 1px dotted;
+}
+
+.category label {
+    color: #666;
+}
+
+#content .category h3 {
+    margin-bottom: 10px;
+}
+
+.category-description {
+    font-size: .9em;
+}
+
+.select-category {
+    margin-bottom: 10px;
 }
 
 .pure-button {
