--- a/trunk/css/network-summary.css
+++ b/trunk/css/network-summary.css
@@ -1,5 +1,6 @@
 .netview-site {
     width: 48%;
+    font-size: 0.9em;
 }
 
 .netview-site.even {
@@ -16,6 +17,7 @@
     width: 100%;
     border: 1px solid black;
     margin-top: 10px;
+    max-height: 137px;
 }
 
 tr.site-info {
@@ -34,6 +36,10 @@ tr.site-info {
 #content table.netview-site h2.site-title {
     margin: 0 0 10px 0;
     font-size: 1.3em;
+}
+
+#content table.netview-site tr td {
+    padding-top: 10px;
 }
 
 table.netview-site tr td:first-of-type {
